Viewfield x.x-x.x, xxxx-xx-xx
-----------------------------

Viewfield 6.x-2.x, xxxx-xx-xx
-----------------------------
#1181226 by sun, keithm: Changed to remove viewfield_views_query_alter().
#535494 by keithm: Fixed stack discipline to avoid rendering same view twice.
#1207552 by keithm: Changed to use widget defaults with force_default.
#311587 by sun, keithm: Fixed force default handling.
by keithm: Rolled back #903034 because it breaks views headers/footers.
#903034 by keithm: Fixed bug producing output for empty view.
#1048516 by GoZ, keithm: Fixed select list to test for deleted view.
#1149592 by keithm: Fixed update_6004() to remove update_sql() call.
#1147558 by dwightaspinwall, sun: Fixed updates with empty contents.
#1141200 by wojtha, keithm: Fixed column vname to allow NULL.
#416922 by keithm: Fixed update_6001 to check current size < 128 before update.
#489908 by sun, keithm: Change default value settings to field instance level.
  - $field['super_default'] is gone, which previously allowed saving nodes
    with no viewfield value, but then to use the field's configured default
    values automatically. This had an effect only for nodes that were created
    before the viewfield was created, because viewfields in nodes created after
    any field is created receive the configured default value preselected in the
    node edit form, and CCK/Field API always stores a value, even if it is the
    same as the default value.
  - $field['super_default_widget'] is equally gone, without replacement, as it
    merely completed aforementioned functionality.
  - $field['widget']['override_default'] is also gone, ditto.
  - $field['token_enabled'] is also gone, as we can replace both legacy tokens
    and Token module tokens without conflicts.
  - Global default values are migrated to the instance level.

Viewfield 6.x-1.x, xxxx-xx-xx
-----------------------------
#416922 by frjo, keithm: Fixed vname too short.