@@ -1,5 +1,0 @@
-
-tr.odd .viewfield-select .form-item,
-tr.even .viewfield-select .form-item {
-  white-space: normal;
-}
