@@ -1,0 +1,4 @@
+
+tr .viewfield-select .form-item {
+  white-space: normal;
+}
